cluster/apps/monitoring/prometheus-blackbox-exporter/networkpolicies/envoy-gateway-egress-blackbox-exporter.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-blackbox-exporter
  namespace: network
spec:
  endpointSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: envoy-external
      gateway.envoyproxy.io/owning-gateway-namespace: network
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: prometheus-blackbox-exporter
            app.kubernetes.io/name: prometheus-blackbox-exporter
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "9115"
              protocol: TCP
