cluster/apps/monitoring/prometheus-blackbox-exporter/networkpolicies/prometheus-blackbox-exporter.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-blackbox-exporter
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-blackbox-exporter
      app.kubernetes.io/instance: prometheus-blackbox-exporter
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            app.kubernetes.io/name: prometheus
            "k8s:io.kubernetes.pod.namespace": monitoring
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            "k8s:io.kubernetes.pod.namespace": ingress-nginx
      toPorts:
        - ports:
            - port: "9115"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: ${NEWSNAB_DOMAIN%%/*}
        - matchName: ds.local.${BASE_DOMAIN}
        - matchName: pihole.local.${BASE_DOMAIN}
        - matchName: pihole.tools.${BASE_DOMAIN}
        - matchName: pihole.vpn.${BASE_DOMAIN}
        - matchName: traefik.tools.${BASE_DOMAIN}
        - matchName: traefik.vpn.${BASE_DOMAIN}
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/component: controller
            "k8s:io.kubernetes.pod.namespace": ingress-nginx
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
